--- a/src/main.sass
+++ b/src/main.sass
@@ -127,7 +127,7 @@ header
       font-weight: normal
 
     p
-      color: #7d7d7d
+      color: #D9CB9E
       margin-top: 9px
       font-weight: normal
       font-size: 16px
